# vr_mesh_editor

./: .gitignore  CMakeLists.txt  ball.mtl  main.cpp  matrix.h  min.pix  min.vrt  minimalOpenGL.h  minimalOpenVR.h
